--- a/sass/main.scss
+++ b/sass/main.scss
@@ -644,12 +644,6 @@ button:hover{
         width: 70%;
         margin: 20px;
     }
-    .contentresto{
-        display: flex;
-        justify-content: space-between;
-        flex-flow: row wrap;
-
-    }
     .restocontent{
         width: 450px;
     }
